@@ -14,6 +14,7 @@
 		- ExcelSheet::merge()
 		- ExcelSheet::delMergeByIndex()
 		- ExcelSheet::splitInfo()
+	* Added data type argument for ExcelSheet::writeCol() (see issue #29)
 	* Updated documentation
 
 [2014-06-03] - Version 1.0
